Moved Box-Sizing To A Mixin
Because use Neat as a module that gets into every file that needs it the box-sizing rule was added to every file creating dupilcate rules.

* updated repo url in package.json
* update url in bower.json
* update package name to @collectivehealth/bourbon-neat

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bourbon-neat",
+  "name": "@collectivehealth/bourbon-neat",
   "version": "1.8.0",
   "description": "A lightweight, semantic grid framework",
   "keywords": [
@@ -27,7 +27,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/thoughtbot/neat.git"
+    "url": "https://github.com/collectivehealth/neat.git"
   },
   "scripts": {
     "test": "echo \"No test specified\""
