--- a/bower.json
+++ b/bower.json
@@ -36,6 +36,6 @@
   "homepage": "http://neat.bourbon.io",
   "repository": {
     "type": "git",
-    "url": "https://github.com/thoughtbot/neat.git"
+    "url": "https://github.com/collectivehealth/neat.git"
   }
 }
